remove hardware communication files from test cov

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -59,4 +59,6 @@ testpaths = ["tests"]
 omit = [
   "src/qfabric/programmer/driver/m4i6622/*",
   "src/qfabric/programmer/device/m4i6622.py",
+  "src/qfabric/programmer/driver/awg710/*",
+  "src/qfabric/programmer/device/awg710.py",
 ]
