--- a/.github/workflows/docs.yaml
+++ b/.github/workflows/docs.yaml
@@ -38,7 +38,7 @@ jobs:
         run: |
           python -m pip install --upgrade pip
           python -m pip install nox
-          python -m pip install -e .[dev]
+          python -m pip install -e .[docs]
       - name: Generate docs
         run: |
           nox -s docs --no-venv -- optional-flag skip-install
