--- a/.github/workflows/docs.yaml
+++ b/.github/workflows/docs.yaml
@@ -33,6 +33,9 @@ jobs:
         uses: actions/setup-python@v6
         with:
           python-version: "3.13"
+          cache: "pip"
+          cache-dependency-path: |
+            pyproject.toml
       - name: Create and activate virtual environment
         run: |
           python -m venv .venv
